[package]
name = "same-file"
version = "1.0.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A simple crate for determining whether two file paths point to the same file.
"""
documentation = "https://docs.rs/same-file"
homepage = "https://github.com/BurntSushi/same-file"
repository = "https://github.com/BurntSushi/same-file"
readme = "README.md"
keywords = ["same", "file", "equal", "inode"]
license = "Unlicense/MIT"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "std",
  "fileapi",
  "minwindef",
  "processenv",
  "winbase",
]

[dev-dependencies]
rand = "0.4"
